--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
         <article>
           <h2>Interests</h2>
           <ul class="interests-list">
-            <li class="interests-list-item">Coden lernen</li>
-            <li class="interests-list-item">Videogames</li>
-            <li class="interests-list-item">Lorem ipsum</li>
-            <li class="interests-list-item">Lorem ipsum</li>
+            <li>Coden lernen</li>
+            <li>Videogames</li>
+            <li>Lorem ipsum</li>
+            <li>Lorem ipsum</li>
           </ul>
         </article>
         <article>
           <h2>Skills</h2>
           <ul class="skills-list">
-            <li class="skills-list-item">HTML</li>
-            <li class="skills-list-item">CSS</li>
-            <li class="skills-list-item">JavaScript</li>
-            <li class="skills-list-item">React</li>
-            <li class="skills-list-item">Git & GitHub</li>
-            <li class="skills-list-item">MongoDB</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>React</li>
+            <li>Git & GitHub</li>
+            <li>MongoDB</li>
           </ul>
         </article>
       </section>
@@ -113,7 +113,7 @@
       </section>
 
       <!--Section about me-->
-      <section id="aboutMe">
+      <section id="aboutMe" class="about-me">
         <h3>About me</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
